CVE-2023-2976 com.google.guava:guava
Override dependency on google.guava for the project spring-security-saml2-service-provider.

cf. https://nvd.nist.gov/vuln/detail/CVE-2023-2976

Closes gh-15780

--- a/saml2/saml2-service-provider/spring-security-saml2-service-provider.gradle
+++ b/saml2/saml2-service-provider/spring-security-saml2-service-provider.gradle
@@ -15,6 +15,15 @@ dependencies {
 
 	optional 'com.fasterxml.jackson.core:jackson-databind'
 
+	dependencies {
+		implementation 'org.opensaml:opensaml-core'
+		constraints {
+			implementation('com.google.guava:guava:32.0.1-jre') {
+				because 'CVE-2023-2976'
+			}
+		}
+	}
+
 	testImplementation 'com.squareup.okhttp3:mockwebserver'
 	testImplementation "org.assertj:assertj-core"
 	testImplementation "org.skyscreamer:jsonassert"
